<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/state_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:gravity="center"
        android:text="@string/login_notice_textview"
        android:textSize="20sp"
        tools:ignore="InvalidId" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="320sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:hint="@string/login_notice_username"
        android:inputType="text"
    />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="320sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:hint="@string/login_notice_password"
        android:inputType="textPassword"
    />

    <Button
        android:id="@+id/login_button"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_notice_login"
    />

    <TextView
        android:layout_width="320sp"
        android:layout_marginTop="150sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/author_notice"
    />

</LinearLayout>